Height fix on tablet

--- a/src/components/_modal-details.scss
+++ b/src/components/_modal-details.scss
@@ -181,8 +181,7 @@ body::after {
     .Modal {
         flex-direction: row;
         align-items: start;
-        min-height: 552px;
-        height: 60%;
+        height: 552px;
         max-width: 80%;
         overflow: hidden;
         max-width: 757px;
